Add .env switch to block Cookies

--- a/example.env
+++ b/example.env
@@ -20,6 +20,14 @@ NO_CSS=true
 #for pages that you want Javascript on.
 NO_JS=true
 
+#Block `Cookie` and `Set-Cookie` headers.
+#retro-proxy turns "secure" cookie header attributes into regular ones,
+#which may be a security risk, as the browser may then send the cookie in a
+#later "insecure" request. (See RFC 6265, section 4.1.2.5)
+#Some sites are dependent on cookies for login and sessions to work correctly.
+#If you trust those and accept the risk, set this to 'false' instead.
+NO_COOKIES=true
+
 #Resize and compress image files. 
 #Smaller screeens or smaller amounts of RAM really benefit from this, but it 
 #prevents you from downloading the full-quality images.
